refactor: 컬렉션 수정 시 장르 점수 업데이트 로직 추가